[package]
name = "rust-monitor"
version = "0.1.0"
authors = ["Josu Goñi <josu_z@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
ncurses = "5.99.0"
num_cpus = "1.13.0"
